--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <p>Beste Freunde B1.1</p>
     </div>
 
+    <footer style="position:absolute; bottom: 2px; left:0;" className="footer">
+      <small>Made by Xreej4n.</small>
+    <small>© Xreej4n Developement. All rights reserved</small>
+    </footer>
+
 
     <script>
         const buttons = document.querySelector(".buttons");
