--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <footer style="position:absolute; bottom: 2px; left:0;" className="footer">
       <small>Made by Xreej4n.</small>
-    <small>© Xreej4n Developement. All rights reserved</small>
+    <small>© Xreej4n Development. All rights reserved</small>
     </footer>
 
 
