--- a/trackplayer.html
+++ b/trackplayer.html
@@ -300,7 +300,7 @@
 </div>   
 <footer class="footer">
       <small>Made by Xreej4n.</small>
-    <small>© Xreej4n Developement. All rights reserved</small>
+    <small>© Xreej4n Development. All rights reserved</small>
     </footer>   
 </div>   
  
