Modified Index Separator Text

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="header" style="padding-bottom: 1px;"><h1>DEhören</h1></div>
-    <h4><span>Class 9</span></h4>
+    <h4><span>Class 9 & 10</span></h4>
     <div role="button" class="buttons">
         <img style="height: 205px;" src="src/Beste Fruende B1-1.jpg">
         <p>Beste Freunde B1.1</p>
