Modified Initial Video Play link (Cl 6)

--- a/maximum1-video.html
+++ b/maximum1-video.html
@@ -60,7 +60,7 @@
 
     <div style="text-align:center;">
   <video id="video-player" playsinline controls>
-    <source src="src/Maximum A1 Module 1 Videos/676744_Maximal_A1_1.1.mp4" type="video/mp4" />
+    <source src="" type="video/mp4" />
   </video>
 </div>
 
